# valerate

./: .gitignore  CMakeLists.txt  compile_flags.txt  grammar.md
.obsidian/: workspace.json
examples/: test.diol  test.vl
include/: arena.hpp  fs.hpp  generation.hpp  macros.hpp  parser.hpp  token.hpp
src/: fs.cpp  generation.cpp  macros.hpp  main.cpp  parser.cpp  token.cpp  token.hpp  types.h
